Made some changes to legend order, made scroll bar visible, moved the charts to a different file, and fixed the y axis from disappearing

--- a/ARGDE/assets/css/ARGDE.css
+++ b/ARGDE/assets/css/ARGDE.css
@@ -593,3 +593,15 @@ body.fixed-nav {
   tr:hover {
     background-color: #dbdbdb;
   }
+
+  @media(device-width: 768px) and (device-height: 1024px){
+    ::-webkit-scrollbar {
+        -webkit-appearance: none;
+        width: 7px;
+    }
+    ::-webkit-scrollbar-thumb {
+        border-radius: 4px;
+        background-color: rgba(0,0,0,.5);
+        -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
+    }
+  }
